infrastructure/sso/authelia/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  replicas: 3
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      # required https://www.authelia.com/integration/kubernetes/introduction/#enable-service-links
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:4.38.9
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - /app/healthcheck.sh
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 9091
            initialDelaySeconds: 0
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          ports:
            - containerPort: 9091
              name: authelia
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /app/secrets
              name: secrets
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: authelia
            items:
              - key: configuration.yml
                path: configuration.yml
        - name: secrets
          projected:
            sources:
            - secret:
                name: authelia
