infrastructure/sso/authelia/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: auth.bubylou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
  tls:
    - hosts:
      - auth.bubylou.com
      secretName: auth-bubylou-tls
